Add DockerFile and docker-compose.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 ## Spring DATA SOURCE Configurations
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/cpdir?allowPublicKeyRetrieval=true
-spring.datasource.username = checkpoint
-spring.datasource.password = 123
+spring.datasource.url = jdbc:mysql://mysqldb:3306/cpdir?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username = root
+spring.datasource.password = admin
 # Show in console
 spring.jpa.show-sql = true
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-server.port = 9191
